--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^9.0.8",
     "react-waypoint": "^10.3.0",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
